Bug 258531 - Kmail replaces dots in filenames with underscores when saving attachments
Summary: Kmail replaces dots in filenames with underscores when saving attachments
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.89
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-02 01:59 UTC by Ian Stanistreet
Modified: 2010-12-13 00:27 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Ian Stanistreet 2010-12-02 01:59:07 UTC
Version:           2.0.89 (using KDE 4.5.80) 
OS:                Linux

Saving an attachment with more than one dot in it results in all but the last dot being replaced with underscores.
For example, test.tar.gz becomes test_tar.gz

Reproducible: Always

Steps to Reproduce:
1. Create a file with two dots in the filename, e.g. test.tar.gz
2. Attach it to an email and send it to yourself (or someone using kmail).
3. Open the received email, or open it from your sent-mail folder. Notice that the filename is as expected (e.g. test.tar.gz).
4. Right-click the attachment and save-as. Notice that the filename in the save-as dialogue has been changed as described (e.g. test_tar.gz).

Actual Results:  
All dots in the filename are replaced with underscores, except the final dot.

Expected Results:  
The filename shouldn't be changed!
Comment 1 Tobias Koenig 2010-12-12 15:09:37 UTC
SVN commit 1205780 by tokoe:

Enable the 'replace dot by underscore in filenames' feature
only in enterprise build where the user base might not be familiar
with the special meaning of dots in filenames.

BUG: 258531


 M  +2 -0      stringutil.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1205780
Comment 2 Ian Stanistreet 2010-12-13 00:27:28 UTC
Thanks Tobias, I didn't realise this was actually a 'feature'.