Enable the 'replace dot by underscore in filenames' feature only in enterprise build where the user base might not be familiar with the special meaning of dots in filenames.

BUG: 258531

svn path=/trunk/KDE/kdepim/messagecore/; revision=1205780