kmail/kmcommands.cpp
@@ -2677,6 +2677,7 @@ QString KMCommand::cleanFileName( const QString &name )
   fileName.replace( '/', '_' );
   fileName.replace( '\\', '_' );
 
+#ifdef KDEPIM_ENTERPRISE_BUILD
   // replace all '.' with '_', not just at the start of the filename
   // but don't replace the last '.' before the file extension.
   int i = fileName.lastIndexOf( '.' );
@@ -2688,6 +2689,7 @@ QString KMCommand::cleanFileName( const QString &name )
     fileName.replace( i, 1, '_' );
     i = fileName.lastIndexOf( '.', i - 1 );
   }
+#endif
   
   // replace all '~' with '_', not just leading '~' either.
   fileName.replace( '~', '_' );
